Fix logic of requests reading and JSONHandler